# securedrop-protocol

./: .git-blame-ignore-revs  .gitignore  DiffieHellman.py  Doxyfile  Makefile  README.md  SOUNDNESS.md  commons.py  demo.sh  deploy_keys.py  dhetm-ish-securedrop.py  dhtem-ish-securedrop.py  dprint.json  dprint.jsonc  journalist.py  journalist_db.py  package-lock.json  pki.py  pqxdh_securedrop.py  pyproject.toml  requirements.txt  server.py  source.py
.github/: CODEOWNERS  (+1 more)
securedrop-protocol/: Cargo.toml  Makefile  bench.js  chart.js  package-lock.json  package.json  rust-toolchain.toml
securedrop-protocol/bench/: Cargo.toml  Makefile  bench.js  chart.js  cli.js  native.js  package-lock.json  package.json  reporting.js  selenium.js  server.js  specs.js  sweeps.js  utils.js
securedrop-protocol/bench/benches/: manual.rs
securedrop-protocol/bench/js/: cli.js  native.js  reporting.js  selenium.js  server.js  specs.js  sweeps.js  utils.js
securedrop-protocol/bench/src/: encrypt_decrypt.rs  lib.rs  submit.rs
securedrop-protocol/bench/www/: index.html
securedrop-protocol/benches/: encrypt_decrypt.rs  manual.rs  submit.rs
securedrop-protocol/benches/quickbench/: encrypt_decrypt.rs
securedrop-protocol/demo-server/: Cargo.toml
securedrop-protocol/demo-server/src/: fpf.rs  main.rs  newsroom.rs  state.rs
securedrop-protocol/demo-server/src/newsroom/: handlers.rs  mod.rs  server.rs
securedrop-protocol/journalist-cli/: Cargo.toml
securedrop-protocol/journalist-cli/src/: fetch.rs  main.rs  reply.rs  setup.rs  storage.rs
securedrop-protocol/proofs/fstar/extraction/: Securedrop_protocol.Bench.Encrypt_decrypt.fst  Securedrop_protocol.Client.fst  Securedrop_protocol.Journalist.fst  Securedrop_protocol.Keys.Journalist.fst  Securedrop_protocol.Keys.Newsroom.fst  Securedrop_protocol.Keys.Source.fst  Securedrop_protocol.Keys.fst  Securedrop_protocol.Messages.Core.fst  Securedrop_protocol.Messages.Setup.fst  Securedrop_protocol.Primitives.Dh_akem.fst  Securedrop_protocol.Primitives.Mlkem.fst  Securedrop_protocol.Primitives.Pad.fst  Securedrop_protocol.Primitives.X25519.fst  Securedrop_protocol.Primitives.Xwing.fst  Securedrop_protocol.Primitives.fst  Securedrop_protocol.Server.fst  Securedrop_protocol.Setup.fst  Securedrop_protocol.Sign.fst  Securedrop_protocol.Source.fst  Securedrop_protocol.Storage.fst  Securedrop_protocol.fst
securedrop-protocol/protocol-minimal/: Cargo.toml  Makefile  clippy.toml
securedrop-protocol/protocol-minimal/benches/: challenges.rs
securedrop-protocol/protocol-minimal/proofs/fstar/extraction/: Makefile  Securedrop_protocol_minimal.Api.fst  Securedrop_protocol_minimal.Bundle.fst  Securedrop_protocol_minimal.Ciphertext.fst  Securedrop_protocol_minimal.Constants.fst  Securedrop_protocol_minimal.Encrypt_decrypt.fst  Securedrop_protocol_minimal.Hax_helper.fst  Securedrop_protocol_minimal.Journalist.fst  Securedrop_protocol_minimal.Keys.Newsroom.fst  Securedrop_protocol_minimal.Keys.fst  Securedrop_protocol_minimal.Message.fst  Securedrop_protocol_minimal.Metadata.fst  Securedrop_protocol_minimal.Primitives.Dh_akem.fst  Securedrop_protocol_minimal.Primitives.Mlkem.fst  Securedrop_protocol_minimal.Primitives.Pad.fst  Securedrop_protocol_minimal.Primitives.Provider.Argon2.fst  Securedrop_protocol_minimal.Primitives.Provider.Blake2.fst  Securedrop_protocol_minimal.Primitives.Provider.Chacha20poly1305.fst  Securedrop_protocol_minimal.Primitives.Provider.Constants.fst  Securedrop_protocol_minimal.Primitives.Provider.Curve25519.fst  Securedrop_protocol_minimal.Primitives.Provider.Ed25519.fst  Securedrop_protocol_minimal.Primitives.Provider.Hkdf.fst  Securedrop_protocol_minimal.Primitives.Provider.Mlkem.fst  Securedrop_protocol_minimal.Primitives.Provider.Params.Chacha20poly1305.fst  Securedrop_protocol_minimal.Primitives.Provider.Params.Curve25519.fst  Securedrop_protocol_minimal.Primitives.Provider.Params.Mlkem.fst  Securedrop_protocol_minimal.Primitives.Provider.Rng.fst  Securedrop_protocol_minimal.Primitives.Provider.Uuid_parse.fst  Securedrop_protocol_minimal.Primitives.X25519.fst  Securedrop_protocol_minimal.Primitives.Xwing.fst  Securedrop_protocol_minimal.Primitives.fst  Securedrop_protocol_minimal.Sealed.fst  Securedrop_protocol_minimal.Server.fst  (+9 more)
securedrop-protocol/protocol-minimal/src/: api.rs  ciphertext.rs  constants.rs  encrypt_decrypt.rs  hax_helper.rs  journalist.rs  key_types.rs  keys.rs  lib.rs  message.rs  metadata.rs  primitives.rs  sealed.rs  server.rs  setup.rs  sign.rs  size.rs  source.rs  storage.rs  traits.rs  types.rs  wire.rs  wire_format.rs
securedrop-protocol/protocol-minimal/src/bench/: encrypt_decrypt.rs  mod.rs
securedrop-protocol/protocol-minimal/src/keys/: newsroom.rs
securedrop-protocol/protocol-minimal/src/messages/: core.rs  setup.rs
securedrop-protocol/protocol-minimal/src/primitives/: dh_akem.rs  mlkem.rs  pad.rs  provider.rs  x25519.rs  xwing.rs
securedrop-protocol/protocol-minimal/src/types/: ciphertext.rs  journalist.rs  key_types.rs  mod.rs  source.rs  traits.rs
securedrop-protocol/protocol-minimal/src/wire/: core.rs  setup.rs
securedrop-protocol/protocol-minimal/tests/: core.rs  setup.rs
securedrop-protocol/protocol-spec/: Cargo.toml
securedrop-protocol/protocol-spec/src/: keys.rs  lib.rs  messaging.rs  primitives.rs  sd_apke.rs  sd_pke.rs  setup.rs  wire.rs
securedrop-protocol/source-cli/: Cargo.toml
securedrop-protocol/source-cli/src/: fetch.rs  identity.rs  main.rs  state.rs  submit.rs  util.rs
securedrop-protocol/src/: client.rs  journalist.rs  keys.rs  lib.rs  messages.rs  mod.rs  primitives.rs  server.rs  setup.rs  sign.rs  source.rs  storage.rs
securedrop-protocol/src/bench/: encrypt_decrypt.rs  mod.rs  submit.rs
securedrop-protocol/src/keys/: journalist.rs  newsroom.rs  source.rs
securedrop-protocol/src/messages/: core.rs  setup.rs
securedrop-protocol/src/primitives/: dh_akem.rs  mlkem.rs  pad.rs  x25519.rs  xwing.rs
securedrop-protocol/src/quickbench/: mod.rs  sd_protocol_quickbench.rs
securedrop-protocol/tests/: core.rs  setup.rs
securedrop-protocol/www/: index.html
(+107 files in other folders)
