[project]
name = "securedrop-protocol"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
zizmor = "^1.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
