[workspace]
resolver = "2"
members = ["protocol-minimal", "bench"]

[workspace.package]
name = "securedrop-protocol"
version = "0.4.0"
edition = "2024"
authors = ["SecureDrop Team <securedrop@freedom.press>"]
license = "GPL-3.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(hax)"] }
