[package]
name = "securedrop-protocol-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["SecureDrop Team <securedrop@freedom.press>"]
description = "Benchmarking for securedrop-protocol-minimal"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
securedrop-protocol-minimal = { path = "../protocol-minimal" }

# Force all versions of getrandom in the dependency tree to build with
# `wasm_js`:
getrandom = { workspace = true, features = ["wasm_js"] }
getrandom04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

js-sys.workspace = true

# Previously, rand_chacha was pinned to 0.9.0 to resolve incompatibility with older wasm-bindgen.
# Check rand_chacha version compat if wasm builds or browser tests spuriously fail
rand_chacha = { workspace = true }
rand_core.workspace = true
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true, features = ["alloc"] }
hashbrown = { workspace = true, features = ["raw"] }

# In theory, it should be possible to use v4 uuids with getrandom per https://docs.rs/uuid/1.18.1/uuid/#building-for-other-targets, but cargo nono complains vigorously
uuid = { workspace = true, features = ["v4", "rng-getrandom", "js"] }

# Keep in sync with Makefile version
wasm-bindgen.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true

[features]
default = []

[[bench]]
name = "manual"
harness = false

[lints]
workspace = true
