[package]
name = "securedrop-demo-server"
description = "Demo SecureDrop protocol server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "demo-server"
path = "src/main.rs"

[dependencies]
securedrop-protocol-minimal = { path = "../protocol-minimal" }

anyhow.workspace = true
axum.workspace = true
clap = { workspace = true, features = ["derive"] }
directories.workspace = true
hex = { workspace = true, default-features = true }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "signal"] }
uuid = { workspace = true, default-features = true, features = ["v4"] }
