[package]
name = "securedrop-journalist-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors = ["SecureDrop Team <securedrop@freedom.press>"]
description = "Demo SecureDrop journalist client"

[[bin]]
name = "journalist-cli"
path = "src/main.rs"

[dependencies]
securedrop-protocol-minimal = { path = "../protocol-minimal" }

anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
directories = "5"
hex = "0.4"
rand_core = { version = "0.9", features = ["os_rng"] }
