[package]
name = "securedrop-journalist-cli"
description = "Demo SecureDrop journalist client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "journalist-cli"
path = "src/main.rs"

[dependencies]
securedrop-protocol-minimal = { path = "../protocol-minimal" }

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
directories.workspace = true
hex.workspace = true
rand.workspace = true
rand_core.workspace = true
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
