[package]
name = "securedrop-protocol-minimal"
version = "0.4.0"
edition = "2024"
authors = ["SecureDrop Team <securedrop@freedom.press>"]
description = "A wip impl of the securedrop protocol"
license = "GPL-3.0"

# hax extraction for this crate is configured in "Makefile", as documented here:
# https://github.com/freedomofpress/securedrop-protocol/wiki/Verification#how-are-f-modules-extracted-from-protocol-minimal

[lib]

[dependencies]
# hax extraction for dependencies is configured in "proofs/fstar/models/Makefile", as documented
# here:
# https://github.com/freedomofpress/securedrop-protocol/wiki/Verification#how-are-f-interfaces-extracted-from-our-dependencies

# no rand/getrandom in core library!

# Crypto stack, pinned to cfm/libcrux@hax-lib-0.3.7 pending cryspen/libcrux#1478:
libcrux-ed25519 = { git = "https://github.com/cfm/libcrux", rev = "3cd1843b0f029b2c8499d1af4234670ad04341bf", features = ["rand"] }
libcrux-curve25519 = { git = "https://github.com/cfm/libcrux", rev = "3cd1843b0f029b2c8499d1af4234670ad04341bf" }
libcrux-chacha20poly1305 = { git = "https://github.com/cfm/libcrux", rev = "3cd1843b0f029b2c8499d1af4234670ad04341bf" }
libcrux-traits = { git = "https://github.com/cfm/libcrux", rev = "3cd1843b0f029b2c8499d1af4234670ad04341bf" }
libcrux-kem = { git = "https://github.com/cfm/libcrux", rev = "3cd1843b0f029b2c8499d1af4234670ad04341bf" }
libcrux-ml-kem = { git = "https://github.com/cfm/libcrux", rev = "3cd1843b0f029b2c8499d1af4234670ad04341bf" }
libcrux-sha2 = { git = "https://github.com/cfm/libcrux", rev = "3cd1843b0f029b2c8499d1af4234670ad04341bf" }

# See workspace-level `Cargo.toml` for patching to enforce hax-lib 0.3.7.
# Pinned here until published crates use hax-lib 0.3.7 and libcrux-sha3 0.0.9.
hpke-rs = { git = "https://github.com/cryspen/hpke-rs", rev = "634caf8", features = ["libcrux"] }

rand_core = { version = "0.10" }

anyhow = "1.0"
hashbrown = { version = "0.14", features = ["raw"] }
uuid = { version = "1.0", default-features = false, features = ["v4", "js"] }
argon2 = "0.5"
blake2 = "0.10"

# pin an exact version to resolve wasm-bindgen schema compatibility issue
rand_chacha = {  version = "0.10.0", default-features = false  }

[dev-dependencies]
proptest = "1.11"
getrandom = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[profile.release]
opt-level = "z"     # smallest code size
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target."cfg(hax)".dependencies]
hax-lib = { version = "0.3.7" }

[lints]
workspace = true
