[package]
name = "securedrop-protocol-minimal"
description = "A wip impl of the securedrop protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# hax extraction for this crate is configured in "Makefile", as documented here:
# https://github.com/freedomofpress/securedrop-protocol/wiki/Verification#how-are-f-modules-extracted-from-protocol-minimal

[lib]

[dependencies]
# hax extraction for dependencies is configured in "proofs/fstar/models/Makefile", as documented
# here:
# https://github.com/freedomofpress/securedrop-protocol/wiki/Verification#how-are-f-interfaces-extracted-from-our-dependencies

# no rand/getrandom in core library!
# Crypto stack, pinned to cfm/libcrux@hax-lib-0.3.7 pending cryspen/libcrux#1478:
libcrux-ed25519 = { workspace = true, features = ["rand"] }
libcrux-curve25519.workspace = true
libcrux-chacha20poly1305.workspace = true
libcrux-traits.workspace = true
libcrux-kem.workspace = true
libcrux-ml-kem.workspace = true
libcrux-sha2.workspace = true
libcrux-hkdf.workspace = true

# See workspace-level `Cargo.toml` for patching to enforce hax-lib 0.3.7.
# Pinned here until published crates use hax-lib 0.3.7 and libcrux-sha3 0.0.9.
hpke-rs = { workspace = true, features = ["libcrux"] }

rand_core.workspace = true

anyhow.workspace = true
hashbrown = { workspace = true, features = ["raw"] }
uuid = { workspace = true, features = ["v4", "js"] }
bip39 = { workspace = true, features = ["alloc"] }
hex = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["derive", "alloc"] }

# pin an exact version to resolve wasm-bindgen schema compatibility issue
rand_chacha = { workspace = true }

[dev-dependencies]
proptest.workspace = true
getrandom = { workspace = true }
serde_json.workspace = true
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "challenges"
harness = false

[profile.release]
opt-level = "z"     # smallest code size
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target."cfg(hax)".dependencies]
hax-lib.workspace = true

[lints]
workspace = true
