[package]
name = "securedrop-protocol-spec"
version = "0.4.0"
edition = "2024"
authors = ["SecureDrop Team <securedrop@freedom.press>"]
description = "Hacspec-style specification of the SecureDrop Protocol, mirroring docs/protocol.md"
license = "GPL-3.0"

[lib]

[dependencies]

[target."cfg(hax)".dependencies]
hax-lib = { version = "0.3.6" }
