[package]
name = "securedrop-source-cli"
description = "Demo source CLI for the SecureDrop protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "source-cli"
path = "src/main.rs"

[dependencies]
securedrop-protocol-minimal = { path = "../protocol-minimal" }

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
hex.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
